<resources>
    <string name="app_name">Money Tracker</string>
    <string name="current_balance">Current Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_note">Enter Note</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="search">Search</string>

</resources>