<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_20"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_20">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_expense"
            android:layout_width="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginStart="@dimen/margin_10"
            android:text="@string/expense"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/income"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:endIconMode="clear_text"
             app:boxStrokeColor="@color/blue"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_10"
             android:layout_marginBottom="@dimen/margin_10">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ed_date"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:focusable="false"
                 android:hint="@string/select_date"/>
         </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/blue"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/select_time"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/blue"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:hint="@string/enter_amount"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/blue"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/enter_note"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/card_corner_radius_3"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:textColor="@color/blue"
                android:backgroundTint="@color/color_3"
                android:text="@string/save_transaction"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
</layout>