<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2"
    tools:context=".ui.activities.MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.Material3.Light"
        app:titleCentered="true"
        app:title="Money Tracker"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_balance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:focusable="true"
        app:cardElevation="@dimen/card_elevation_20"
        android:clickable="true"
        app:cardBackgroundColor="@color/color_3"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:rippleColor="@color/color_4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_balance"
                    android:padding="@dimen/padding_10"
                    style="@style/textviewStyle"/>
                <TextView
                    android:id="@+id/tv_current_balance"
                    android:layout_width="@dimen/tv_width_70"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_18"
                    android:layout_marginStart="@dimen/margin_90"
                    style="@style/textviewStyle"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:padding="@dimen/padding_10"
                    style="@style/textviewStyle"/>
                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="@dimen/tv_width_70"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/margin_158"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:padding="@dimen/padding_10"
                    style="@style/textviewStyle"/>
                <TextView
                    android:id="@+id/tv_expense"
                    android:layout_width="@dimen/tv_width_70"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/margin_150"
                    android:textSize="@dimen/text_size_18"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/height_0"
        android:paddingBottom="@dimen/padding_16"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/cv_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_30"
        android:elevation="@dimen/card_elevation_20"
        app:icon="@drawable/baseline_add_card_24"
        app:iconTint="@color/white"
        android:backgroundTint="@color/color_1"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:rippleColor="@color/color_4"
        android:focusable="false"
        android:clickable="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>